<resources>
    <string name="app_name">BackHomeSafe</string>
    <string name="cn_user_name">Name</string>
    <string name="cn_user_password">Password</string>
    <string name="cn_user_cf_password">Confirm Password</string>
    <string name="cn_user_email">Email Address</string>
    <string name="cn_user_phone_num">Phone Number</string>
    <string name="cn_user_address">Address</string>
    <string name="cn_user_IDCid">ID</string>
    <string name="cn_user_ex_IDCid">ex. M123456(7)</string>
    <string name="cn_user_reg_title">Sign Up</string>
    <string name="cn_user_reg_subtitle">Please enter your personal information</string>
    <string name="cn_user_reg_confirm">Confirm Registration</string>
    <string name="cn_shop_reg_title">Business Registration</string>
    <string name="cn_shop_reg_sub_title">Please enter your business information</string>
    <string name="cn_shop_reg_confirm">Confirm Registration</string>
    <string name="cn_shop_name">Business Title</string>
    <string name="cn_shop_RID">Business ID</string>
    <string name="cn_shop_telephone">Phone Number</string>
    <string name="cn_shop_lat">Latitude</string>
    <string name="cn_shop_long">Longitude</string>
    <string name="cn_loing_title">Log In</string>
    <string name="cn_loing_confirm">Log In</string>
    <string name="cn_loing_email">Email Address</string>
    <string name="cn_loing_password">Password</string>
    <string name="cn_action_register">Click here to register</string>
    <string name="cn_action_login">Return to Log In</string>
    <string name="cn_welcome_button_login">Log In</string>
    <string name="cn_welcome_button_register">Sign Up</string>
    <string name="cn_welcome_button_shop_register">Business Register</string>
    <string name="cn_icon_dec">app icon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scanner">Scanner</string>
    <string name="scanner_leave_btn">Leave</string>
    <string name="info_page_button_qr">QR Code Scanner</string>
    <string name="info_page_button_health">Health Code</string>
    <string name="info_page_button_health_history">Health History</string>
    <string name="info_page_button_booking">Booking System</string>
    <string name="no_data">No Data.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>