<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_scanner_black_24dp"
        android:title="@string/title_scanner" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="Map" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_announce"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>