<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_register_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/user_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cn_user_reg_title"
            android:textSize="36sp"
            android:translationY="30dp" />

        <TextView
            android:id="@+id/user_register_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cn_user_reg_subtitle"
            android:textSize="18sp"
            android:translationY="35dp" />

        <LinearLayout
            android:id="@+id/user_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/user_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_email"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_email" />

                <EditText
                    android:id="@+id/user_reg_input_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:labelFor="@id/user_reg_label_email" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_password" />

                <EditText
                    android:id="@+id/user_reg_input_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@id/user_reg_label_pw" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_cfpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_cfpw"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_cf_password" />

                <EditText
                    android:id="@+id/user_reg_input_cfpw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:labelFor="@id/user_reg_label_cfpw" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_name" />

                <EditText
                    android:id="@+id/user_reg_input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:labelFor="@id/user_reg_label_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_phone_num"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_phone_num" />

                <EditText
                    android:id="@+id/user_reg_input_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:labelFor="@id/user_reg_label_phone_num" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_user_address" />

                <EditText
                    android:id="@+id/user_reg_input_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress"
                    android:labelFor="@id/user_reg_label_address" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_reg_idcid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_reg_label_idcid"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cn_user_IDCid" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_reg_input_idcid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cn_user_ex_IDCid"
                    android:labelFor="@id/user_reg_label_idcid" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/user_reg_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/user_register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="200dp"
            android:onClick="reg_submit"
            android:text="@string/cn_user_reg_confirm"
            android:translationY="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>