<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/user_signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cn_icon_dec"
            android:src="@drawable/bhs_logo" />

        <TextView
            android:id="@+id/user_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cn_loing_title"
            android:textSize="36sp"
            android:translationY="30dp" />

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:translationY="70dp">

            <LinearLayout
                android:id="@+id/user_login_form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_login_form_lable_email"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_loing_email" />

                <EditText
                    android:id="@+id/user_login_form_input_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_login_form_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_login_form_lable_pw"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cn_loing_password" />

                <EditText
                    android:id="@+id/user_login_form_input_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/user_login_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/user_login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="200dp"
            android:onClick="login_submit"
            android:text="@string/cn_loing_confirm"
            android:translationY="150dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>